<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sammy.production.myappportfolio.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/string0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but1"
            style="@style/AppButtons"
            android:onClick="popMov"
            android:text="@string/string1" />

        <Button
            android:id="@+id/but2"
            style="@style/AppButtons"
            android:onClick="stock"
            android:text="@string/string2" />

        <Button
            android:id="@+id/but3"
            style="@style/AppButtons"
            android:onClick="big"
            android:text="@string/string3" />

        <Button
            android:id="@+id/but4"
            style="@style/AppButtons"
            android:onClick="material"
            android:text="@string/string4" />

        <Button
            android:id="@+id/but5"
            style="@style/AppButtons"
            android:onClick="ubi"
            android:text="@string/string5" />

        <Button
            android:id="@+id/but6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:background="@color/cp"
            android:onClick="capstone"
            android:text="@string/string6" />

    </LinearLayout>
</ScrollView>